--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,12 @@ a:hover {
 
 body {
   margin: 0;
+  margin-top: 10vh;
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 2em;
+  padding-inline: 5vw;
 }
 
 button {
