--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 :root {
+  --background-color: #242424;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +26,7 @@ a:hover {
 
 body {
   margin: 0;
-  margin-top: 10vh;
+  margin-top: 5vh;
 }
 
 h1 {
